gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/static_import.d
version https://git-lfs.github.com/spec/v1
oid sha256:2b389d227015f818fa4273fda5154813405d6b0bbad8fb83cdad98ad0d77a55f
size 164
